# DnDCore

./: .gitignore  combatcharacter.h  damage.cpp  dice.cpp  item.h  main.cpp  weapon.h
combat/: damage.h  item.h
documents/: CampaignStartingQuestions.md
mappa_imperium/: CMakeLists.txt  chat.cpp
maps/: sceneobject.cpp  sceneobject.h
meta/: CMakeLists.txt  dice.h
